<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.item.TeacherItemAdapter">

    <RelativeLayout
            android:id="@+id/teacher_container_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_25"
            android:layout_marginEnd="@dimen/dp_25"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@drawable/shape_white_10_bg"
            tools:ignore="UselessParent">

        <!-- 老师头像 -->
        <ImageView
                android:id="@+id/teacher_avatar_image_view"
                android:layout_width="@dimen/dp_47"
                android:layout_height="@dimen/dp_47"
                android:layout_margin="@dimen/dp_5"
                android:src="@mipmap/icon_photo"
                android:contentDescription="@string/TODO"/>

        <!--老师名称,聊天信息-->
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_7"
                android:layout_marginBottom="@dimen/dp_12"
                android:layout_toEndOf="@id/teacher_avatar_image_view">

            <!-- 老师名称,时间戳-->
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <!--老师名称-->
                <TextView
                        android:id="@+id/teacher_name_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/teacher_name"
                        android:textColor="@color/black_19"
                        android:textSize="@dimen/sp_13"
                        tools:ignore="RelativeOverlap"/>

                <!--时间显示-->
                <TextView
                        android:id="@+id/chat_timestamp_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/dp_15"
                        android:text="@string/timestamp"
                        android:textColor="@color/gray_99"
                        android:textSize="@dimen/sp_13"
                        tools:ignore="RelativeOverlap"/>

            </RelativeLayout>

            <!-- 聊天信息-->
            <TextView
                    android:id="@+id/chat_message_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="@string/chat_msg"
                    android:textColor="@color/gray_99"
                    android:textSize="@dimen/sp_13"/>
        </LinearLayout>

    </RelativeLayout>


</LinearLayout>