<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background"
        tools:context=".MainActivity">

    <FrameLayout
            android:id="@+id/main_content_fragment_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp_48"
            tools:ignore="MissingConstraints"/>

    <RadioGroup
            android:background="@drawable/shape_white_25_bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginBottom="0dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

        <RadioButton
                android:id="@+id/home_class_radio_button"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:text="@string/class_text"
                android:textSize="@dimen/sp_12"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"/>

        <RadioButton
                android:id="@+id/home_question_radio_button"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:text="@string/question_bank_text"
                android:textSize="@dimen/sp_12"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"/>

        <RadioButton
                android:id="@+id/home_mine_radio_button"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:text="@string/mine_text"
                android:textSize="@dimen/sp_12"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"/>
    </RadioGroup>

</RelativeLayout>